mysql-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql_db
spec:
  containers:
  - name: mysql
    image: mysql:5.7
    ports:
    - name: mysql-port
      containerPort: 3306
