pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
  - name: kripal-nginx
    image: nginx
    ports:
    - containerPort: 8080
