pod3.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  labels:
    app: helloworld
spec:
  containers:
  - name: k8s-demo
    imgage: arjunachari12/k8s-demo
    ports:
    - name: nodejs-port
      containerPort: 3000
