java-pod-service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  ports:
  - port: 30091
    nodePort: 30092
    targetPort: java-port
    protocol: TCP
  selector:
    app: java-docker-project
  type: NodePort
